<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="upcomingEvents">Upcoming Events</string>
    <string name="dicodingUpcomingEvent">Dicoding Upcoming Event</string>
    <string name="dicodingFinishedEvent">Dicoding Finished Event</string>
    <string name="finishedEvents">Finished Events</string>
    <string name="organized_by">Diselenggarakan oleh %1$s</string>
    <string name="remaining_quota">Sisa kuota: %1$d</string>
    <string name="recommendText">Recommendation event for you!</string>
    <string name="register">Register</string>
    <string name="event_image">EventImage</string>
    <string name="dot_separator">•</string>
    <string name="label_summary">Summary</string>
    <string name="label_description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>